# todolist-server

./: .env  Cargo.toml  package-lock.json  package.json
migrations/: 20250605072624_create_tasks_table.sql
migrations/migrations/: 20250605072624_create_tasks_table.sql
src/: handlers.rs  main.rs  models.rs  state.rs
todolist-server/: Cargo.toml
todolist-server/src/: main.rs
