[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4"
actix-cors = "0.7.1"

# ✅ Only one correct sqlx entry with all needed features
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "macros",
  "migrate"
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }

lazy_static = "1.4"
regex = "1"
once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"